--- a/src/components/topbar/Topbar.scss
+++ b/src/components/topbar/Topbar.scss
@@ -10,35 +10,29 @@
   z-index: 4;
   transition: all 2s ease;
   overflow: hidden;
-}
 
-a:link {
-  text-decoration: none;
-  color: inherit;
-}
+  a:link {
+    text-decoration: none;
+    color: inherit;
+  }
 
-.wrapper {
-  padding: 6px 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  .left {
+  .wrapper {
+    padding: 6px 30px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
-    .logo {
-      font-size: 40px;
-      font-weight: 700;
-      text-decoration: none;
-      color: inherit;
-      margin-right: 40px;
-    }
-
-    .itemContainer {
+    .center {
       display: flex;
       align-items: center;
-      margin-left: 30px;
+
+      .logo {
+        font-size: 40px;
+        font-weight: 700;
+        text-decoration: none;
+        color: inherit;
+        margin-right: 40px;
+      }
 
       @include mobile {
         display: none;
@@ -54,53 +48,53 @@ a:link {
         font-weight: 500;
       }
     }
-  }
 
-  .right {
-    .hamburger {
-      width: 32px;
-      height: 25px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      cursor: pointer;
+    .right {
+      .hamburger {
+        width: 32px;
+        height: 25px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
 
-      span {
-        width: 100%;
-        height: 3px;
-        background-color: white;
-        transform-origin: left;
-        transition: all 2s ease;
+        span {
+          width: 100%;
+          height: 3px;
+          background-color: white;
+          transform-origin: left;
+          transition: all 2s ease;
+        }
       }
     }
   }
-}
 
-&.active {
-  background-color: white;
-  color: $mainColor;
+  &.active {
+    background-color: white;
+    color: $mainColor;
 
-  a:link,
-  a:visited,
-  a:active {
-    text-decoration: none;
-    font-style: 15px;
+    a:link,
+    a:visited,
+    a:active {
+      text-decoration: none;
+      font-style: 15px;
 
-    color: inherit;
-  }
+      color: inherit;
+    }
 
-  .hamburger {
-    span {
-      &:first-child {
-        background-color: $mainColor;
-        transform: rotate(45deg);
-      }
-      &:nth-child(2) {
-        opacity: 0;
-      }
-      &:last-child {
-        background-color: $mainColor;
-        transform: rotate(-45deg);
+    .hamburger {
+      span {
+        &:first-child {
+          background-color: $mainColor;
+          transform: rotate(45deg);
+        }
+        &:nth-child(2) {
+          opacity: 0;
+        }
+        &:last-child {
+          background-color: $mainColor;
+          transform: rotate(-45deg);
+        }
       }
     }
   }
