--- a/src/components/topbar/Topbar.scss
+++ b/src/components/topbar/Topbar.scss
@@ -23,15 +23,16 @@
     justify-content: space-between;
 
     .center {
-      display: flex;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
 
       .logo {
         font-size: 40px;
         font-weight: 700;
         text-decoration: none;
         color: inherit;
-        // margin-right: 40px;
-        margin-left: 525px;
       }
 
       @include mobile {
