--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-.app {
+/* .app {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -36,4 +36,4 @@ button {
   cursor: pointer;
   margin-top: 15px;
   margin-bottom: 30px;
-}
+} */
