--- a/src/components/ReactSlider/reactSlider.scss
+++ b/src/components/ReactSlider/reactSlider.scss
@@ -110,6 +110,10 @@
               }
             }
 
+            .input {
+              border-radius: 8px;
+            }
+
             .submit {
               border-radius: 8px;
             }
