--- a/client/src/components/ReactSlider/reactSlider.scss
+++ b/client/src/components/ReactSlider/reactSlider.scss
@@ -63,28 +63,35 @@
 
         .left {
           flex: 4;
-          height: 80%;
+          height: 50%;
           display: flex;
           align-self: flex-start;
 
-          img {
-            width: 25px;
+          .leftContainer {
+            width: 90%;
+            height: 70%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
 
-            @include mobile {
-              width: 15px;
+            img {
+              width: 25px;
+
+              @include mobile {
+                width: 15px;
+              }
             }
-          }
-          h2 {
-            font-size: 30px;
-            text-align: center;
-            padding-left: 10px;
+            h2 {
+              font-size: 30px;
+              text-align: center;
+              padding-left: 10px;
 
-            @include mobile {
-              font-size: 13px;
+              @include mobile {
+                font-size: 13px;
+              }
             }
           }
         }
-
         .right {
           flex: 8;
           height: 100%;
@@ -94,20 +101,22 @@
           overflow: hidden;
           flex-direction: column;
 
-          p {
-            font-size: 20px;
-            padding: 10px;
-            @include mobile {
-              display: none;
+          .rightContainer {
+            p {
+              align-self: flex-start;
+              font-size: 30px;
+              @include mobile {
+                display: none;
+              }
             }
-          }
 
-          .input {
-            border-radius: 8px;
-          }
+            .input {
+              border-radius: 8px;
+            }
 
-          .submit {
-            border-radius: 8px;
+            .submit {
+              border-radius: 8px;
+            }
           }
         }
       }
