--- a/client/src/components/ReactSlider/reactSlider.scss
+++ b/client/src/components/ReactSlider/reactSlider.scss
@@ -54,72 +54,32 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-
-        @include mobile {
-          width: 80%;
-          height: 150px;
-          margin: 15px 0;
-        }
-
-        .left {
-          flex: 4;
-          height: 50%;
-          display: flex;
-          align-self: flex-start;
-
-          .leftContainer {
-            width: 90%;
-            height: 70%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-
-            img {
-              width: 25px;
-
-              @include mobile {
-                width: 15px;
-              }
-            }
-            h2 {
-              font-size: 30px;
-              text-align: center;
-              padding-left: 10px;
-
-              @include mobile {
-                font-size: 13px;
-              }
-            }
-          }
-        }
-        .right {
-          flex: 8;
-          height: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          overflow: hidden;
-          flex-direction: column;
-
-          .rightContainer {
-            p {
-              align-self: flex-start;
-              font-size: 30px;
-              @include mobile {
-                display: none;
-              }
-            }
-
-            .input {
-              border-radius: 8px;
-            }
-
-            .submit {
-              border-radius: 8px;
-            }
-          }
-        }
       }
     }
   }
+}
+
+form {
+  padding: 15px;
+  margin: 10px 0px;
+  border-radius: 5px;
+  border: 1px solid grey;
+}
+
+button {
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  border: none;
+  background-color: rebeccapurple;
+  color: white;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 15px;
+}
+
+p {
+  font-size: 25px;
 }
