--- a/client/src/components/ReactSlider/reactSlider.scss
+++ b/client/src/components/ReactSlider/reactSlider.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .works {
-  background-color: $mainColor;
+  background-color: crimson;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,37 +53,84 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        flex-direction: column;
+
+        @include mobile {
+          width: 80%;
+          height: 150px;
+          margin: 15px 0;
+        }
+
+        .left {
+          flex: 4;
+          height: 80%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          .leftContainer {
+            width: 90%;
+            height: 70%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .imgContainer {
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              background-color: rgb(245, 179, 155);
+              display: flex;
+              align-items: center;
+              justify-content: center;
+
+              @include mobile {
+                width: 20px;
+                height: 20px;
+              }
+
+              img {
+                width: 25px;
+
+                @include mobile {
+                  width: 15px;
+                }
+              }
+            }
+            h2 {
+              font-size: 20px;
+
+              @include mobile {
+                font-size: 13px;
+              }
+            }
+            p {
+              font-size: 13px;
+              @include mobile {
+                display: none;
+              }
+            }
+            span {
+              font-size: 12px;
+              font-weight: 600;
+              text-decoration: underline;
+              cursor: pointer;
+            }
+          }
+        }
+        .right {
+          flex: 8;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          overflow: hidden;
+
+          img {
+            width: 400px;
+            transform: rotate(-10deg);
+          }
+        }
       }
     }
   }
-}
-
-input {
-  border: 2px solid-grey;
-  width: 100%;
-}
-
-form {
-  padding: 15px;
-  margin: 10px 0px;
-  border-radius: 5px;
-}
-
-button {
-  width: 100%;
-  height: 50px;
-  padding: 10px;
-  border: none;
-  background-color: rebeccapurple;
-  color: white;
-  border-radius: 5px;
-  font-weight: bold;
-  font-size: 18px;
-  cursor: pointer;
-  margin-top: 15px;
-}
-
-p {
-  font-size: 25px;
 }
